Hotfix: Alignment bug fixed

--- a/resources/css/mycss.css
+++ b/resources/css/mycss.css
@@ -61,7 +61,7 @@ h5 {
 
 #clock, #countdown, #timer {
 	position: absolute;
-	width: 100rem;
+	width: 150rem;
 	text-align: center;
 }
 
